src/sass/components/_nav.sass
// ---------------------------
// Main portfolio nav with grid
// ---------------------------
.nav-portfolio
  display: grid
  grid-template-columns: 1fr
  gap: 2rem
  text-align: center
  list-style: none
  width: 100%

@media (min-width: 768px)
  .nav-portfolio
    grid-template-columns: repeat(2, 1fr)
    > *:first-child
      grid-column: 1 / -1

nav
  display: flex
  position: sticky
  top: 1rem
  z-index: 100

.nav-portfolio--row
  display: inline-flex
  flex-wrap: wrap
  justify-content: center
  gap: 4px
  padding: 5px
  background: var(--color-tabsBg)
  box-shadow: var(--color-tabStroke) 0 0 0 1px, var(--shadow-elevation-low)
  border-radius: 1.5rem
  width: auto
  margin: 0 auto 1.5rem
  &:before
    content: ''
    display: block
    top: -1rem
    left: -16rem
    right: -16rem
    height: 5rem
    position: absolute
    backdrop-filter: blur(1rem)
    z-index: -1
    mask-image: linear-gradient(180deg,rgba(0, 0, 0, 1) 1rem, rgba(0, 0, 0, 0) 100%)
    transition: none

.nav-portfolio__link
  font-size: .8rem
  line-height: 1rem
  border-radius: 3rem
  padding: 8px 16px
  display: block
  color: var(--color-text)
  transition: all 300ms ease-in
  text-wrap: nowrap
  &:hover
    color: var(--color-link)
  .nav-portfolio--row &.nav-portfolio__link--active
    background: var(--color-tabBg)
    box-shadow: var(--color-tabStroke) 0 0 0 1px
    color: var(--color-link)

.nav-portfolio__hdr
  color: var(--color-hdr)
  white-space: nowrap
  padding: 0
  a:hover &
    color: var(--color-link-hover)
  .nav-portfolio--row &
    font-weight: normal

.nav-portfolio__deck
  color: var(--color-sub-hdr)

